--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.44.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
